<resources>
    <string name="app_name">GreenSpadesHistory</string>
    <string name="total_sale_count">Total Sale Count</string>
    <string name="today_sale_count">Today Sale Count</string>
    <string name="total_sale_sum">Total Sale Sum</string>
    <string name="today_sale_sum">Today Sale Sum</string>
    <string name="transactions">Transaction History</string>
    <string name="items_cost">Items Cost</string>
    <string name="total_tax">Total Tax</string>
    <string name="title">Welcome to Green Spades</string>
    <string name="description">A utility to keep a track of the transactions history at a merchant\'s business</string>
    <string name="but_text">Check History</string>
    <string name="but_description">Click here to see the transaction history</string>
</resources>
