<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/purple_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today_sale_count"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/light_purple"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_today_sale_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@drawable/blue_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today_sale_sum"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/light_blue"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_today_sale_sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/yellow_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_sale_count"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/yellow"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_total_sale_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@drawable/pink_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_sale_sum"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/pink"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_total_sale_sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:text="@string/transactions"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"
        android:layout_marginTop="12dp"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_transactions"
        android:layout_marginTop="8dp"
        />

</LinearLayout>